solution/day-2/step-5/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      imagePullSecrets:
        - name: auth-master3-registry
      containers:
      - name: front
        image: master3.takima.io:4567/master3/kubernetes-resources/front:latest
        ports:
        - containerPort: 80
