solution/day-2/step-5/pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-database
  labels:
    app: pg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pg
  template:
    metadata:
      labels:
        app: pg
    spec:
      containers:
      - name: postgres
        image: master3.takima.io:4567/master3/kubernetes-resources/db:latest
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: pg-data
        ports:
        - containerPort: 80
      volumes:
      - name: pg-data
        persistentVolumeClaim:
          claimName: pg-db
      imagePullSecrets:
      - name: auth-master3-registry
