solution/day-2/step-5/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: pg
spec:
  type: ClusterIP
  ports:
   - port: 5432
  selector:
   app: pg
