solution/day-2/step-5/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 annotations:
   kubernetes.io/ingress.class: nginx
 name: api
spec:
 rules:
 - host: api.amoreau.takima.cloud
   http:
     paths:
     - backend:
         service:
           name: api
           port:
             number: 80
       path: /
       pathType: Prefix
