solution/day-2/step-5/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 annotations:
   kubernetes.io/ingress.class: nginx
 name: front
spec:
  rules:
  - host: front.amoreau.takima.cloud
    http:
      paths:
      - backend:
          service:
            name: front
            port:
              number: 80
        path: /
        pathType: Prefix
